--- a/nh48cta.html
+++ b/nh48cta.html
@@ -262,7 +262,8 @@
   display:inline-flex;
   align-items:center;
   justify-content:center;
-  padding:0.5rem 1rem;
+  /* slightly tighter padding so buttons fit on narrow screens */
+  padding:0.4rem 0.9rem;
   background-color:var(--green);
   color:var(--btn-text);
   border:1px solid var(--border);
@@ -282,13 +283,15 @@
 }
 /* responsive behaviour for HRT nav: stack items on very narrow screens */
 @media (max-width:500px) {
+  /* Stack the project links vertically and center them */
   .hrt-nav {
     flex-direction:column;
     align-items:center;
   }
   .hrt-nav a {
-    width:100%;
-    max-width:260px;
+    /* Allow the buttons to size themselves based on content */
+    width:auto;
+    max-width:none;
     font-size:13px;
     padding:0.5rem 0.8rem;
   }
@@ -340,14 +343,16 @@
   }
   /* stack Howker project links on mobile */
   .hrt-nav {
+    /* stack links vertically on narrow screens */
     flex-direction:column;
     align-items:center;
   }
   .hrt-nav a {
-    width:100%;
-    max-width:280px;
+    /* auto width to fit content instead of 100% */
+    width:auto;
     font-size:14px;
-    padding:0.5rem 1rem;
+    /* match tighter padding to keep buttons compact */
+    padding:0.4rem 0.9rem;
     margin:0;
   }
 }
