Update landing page app links

--- a/project_landing_page.html
+++ b/project_landing_page.html
@@ -203,7 +203,7 @@
       <p class="meta">Peak catalog • Detail pages • Photos</p>
       <p>Explore New Hampshire’s 48 four-thousand-footers with a searchable catalog UI and per-peak detail pages. The app reads directly from the NH48 API to display each peak’s elevation, prominence, range, difficulty, standard routes, and rich photo metadata—perfect for trip-planning or as a live demo of the API.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/nh48-api-app">Open NH48 App</a>
+      <a class="btn" href="https://nh48.info">Open NH48 App</a>
     </article>
 
     <!-- WMNF Trails API App -->
@@ -214,7 +214,7 @@
       <p class="meta">Trail explorer • Progress tracker • 3-D hike</p>
       <p>Browse White Mountain trails with a searchable list and interactive map powered by the WMNF Trails API. Mark trails as completed, record dates, hide completed routes, export or import your progress, and launch an immersive 3-D “Virtual Hike” over the trail in Cesium. Not for navigation—always verify against official maps and guidebooks.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/wmnf-trails-api-app">Open Trails App</a>
+      <a class="btn" href="https://nh48.info/pages/trails_app.html">Open Trails App</a>
     </article>
   </section>
 
