Update footer links to new NH48 apps

--- a/footer.html
+++ b/footer.html
@@ -72,18 +72,32 @@
       <section class="col" aria-label="NH48pics internal links">
         <h3>On this site</h3>
 
+        <a class="btn web" href="https://www.nh48.info" target="_blank" rel="noopener noreferrer">
+          <span class="icon" aria-hidden="true">
+            <img src="nh48API_logo.png" alt="NH48 API app icon">
+          </span>
+          <span class="text">NH48 API Web App<span class="sub">Search peaks on nh48.info</span></span>
+        </a>
+
+        <a class="btn web" href="https://www.nh48.info/pages/trails_app.html" target="_blank" rel="noopener noreferrer">
+          <span class="icon" aria-hidden="true">
+            <img src="WMNF_Trails_API_logo.png" alt="WMNF Trails app icon">
+          </span>
+          <span class="text">WMNF Trails Web App<span class="sub">Trail explorer on nh48.info</span></span>
+        </a>
+
+        <a class="btn web" href="https://www.nh48.app" target="_blank" rel="noopener noreferrer">
+          <span class="icon" aria-hidden="true">
+            <img src="https://static.wixstatic.com/media/66b1b2_6dfce097ed584b5296afeb83f26e4c8a~mv2.png" alt="Peakbagger's Journal Icon">
+          </span>
+          <span class="text">Peakbagger’s Journal<span class="sub">Free hiking checklist web app</span></span>
+        </a>
+
         <a class="btn web" href="/">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_97d45b297b0a42d59efff0647204c215~mv2.png" alt="Home icon">
           </span>
           <span class="text">Home<span class="sub">NH48pics.com</span></span>
-        </a>
-
-        <a class="btn web" href="/peakbagger">
-          <span class="icon" aria-hidden="true">
-            <img src="https://static.wixstatic.com/media/66b1b2_6dfce097ed584b5296afeb83f26e4c8a~mv2.png" alt="Peakbagger's Journal Icon">
-          </span>
-          <span class="text">Peakbagger’s Journal<span class="sub">Free hiking checklist web app</span></span>
         </a>
 
         <a class="btn web" href="/category/all-products">
