Refine Howker Ridge conditions layout

--- a/howker_trail_conditions.html
+++ b/howker_trail_conditions.html
@@ -34,7 +34,7 @@
 
 <style>
   :root{
-    --bg:#0c0d0f; --card:#14161a; --ink:#eef1f4; --muted:#a6acb3; --line:#22252b;
+    --bg:#0c0d0f; --card:#14161a; --ink:#ffffff; --muted:#d7dce4; --line:#22252b;
     --accent:#5aa9ff; --good:#3fb950; --warn:#f1c40f; --bad:#ff6b6b; --info:#60b0f0; --trail:#c49a6c;
   }
   *{box-sizing:border-box}
@@ -50,10 +50,10 @@
   /* vertical gap between stacked (full-width) panels */
   .card.wide{margin-bottom:20px}
 
-  .label{color:var(--muted);font-size:.95rem;margin-bottom:8px;display:flex;gap:.5rem;align-items:center}
+  .label{color:var(--ink);font-size:.95rem;margin-bottom:8px;display:flex;gap:.5rem;align-items:center}
   .value{font-weight:600}
   .row{display:flex;align-items:center;justify-content:space-between;margin:8px 0;gap:10px}
-  .small{font-size:.9rem;color:var(--muted)}
+  .small{font-size:.9rem;color:var(--ink)}
   .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;overflow-wrap:anywhere}
   .hidden{display:none}
   .btn{appearance:none;border:1px solid #2a2d33;background:#191d23;color:#eaecef;padding:8px 10px;border-radius:10px;cursor:pointer}
@@ -73,6 +73,26 @@
   .wide{grid-column:1/-1}
   .footer-row{display:flex;gap:12px;align-items:center}
   .footer-row .right{margin-left:auto;text-align:right}
+  .brushing-figure{margin:0}
+  .brushing-img{width:100%;height:auto;display:block;border-radius:12px;border:1px solid var(--line);background:#0c0d0f}
+  .brushing-cap{margin-top:8px;color:var(--muted);font-size:.92rem}
+
+  /* tighter half-width grid for conditions */
+  .grid.conditions{max-width:560px;margin:0 auto;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));}
+
+  /* stat cards for metadata / snow */
+  .stat-grid{display:grid;gap:10px}
+  .stat{background:#101318;border:1px solid var(--line);border-radius:12px;padding:12px}
+  .stat-label{color:var(--muted);font-size:.9rem;margin-bottom:4px}
+  .stat-value{font-weight:700;font-size:1.05rem;letter-spacing:.01em}
+  .stat-note{margin-top:10px;color:var(--muted)}
+
+  /* snow list styling */
+  #snowSummary{font-weight:700;font-size:1.02rem;margin-bottom:8px}
+  .snow-list{list-style:none;margin:10px 0 0;padding:0}
+  .snow-list li{display:flex;justify-content:space-between;align-items:center;gap:10px;padding:10px 12px;border:1px solid var(--line);border-radius:10px;background:#101318}
+  .snow-list .time{font-weight:700}
+  .snow-list .metrics{color:var(--muted);font-size:.92rem;text-align:right}
 
   /* ------------------ MOBILE TUNE-UPS ------------------ */
   @media (max-width: 740px){
@@ -133,6 +153,18 @@ h1 { margin-top: 0 !important; }
     </p>
   </header>
 
+  <!-- Latest brushing map -->
+  <section class="card wide" aria-labelledby="brushing-h">
+    <div class="label" id="brushing-h">
+      <svg class="ico-fill" style="color:#8bd17c" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 12l6 6L20 6"/></svg>
+      Howker Ridge Latest Brushing Report
+    </div>
+    <figure class="brushing-figure">
+      <img class="brushing-img" src="Howker%20Ridge%20Brushing.png" alt="Map showing latest brushing status for the Howker Ridge Trail" loading="lazy" aria-describedby="brushing-cap">
+      <figcaption class="brushing-cap" id="brushing-cap">Latest Brushing Map</figcaption>
+    </figure>
+  </section>
+
   <!-- Safety at the very top -->
   <section class="card wide" aria-labelledby="safety-h">
     <div class="label" id="safety-h">
@@ -189,16 +221,27 @@ h1 { margin-top: 0 !important; }
   </section>
 
   <!-- Even grid for conditions -->
-  <section class="grid" aria-label="Conditions Grid">
+  <section class="grid conditions" aria-label="Conditions Grid">
     <section class="card" aria-labelledby="meta-h">
       <div class="label" id="meta-h">
         <svg class="ico-fill" style="color:var(--info)" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a7 7 0 0 0-7 7c0 5.314 7 11 7 11s7-5.686 7-11a7 7 0 0 0-7-7Zm0 9.5a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/></svg>
         Peak Metadata
       </div>
-      <div class="row"><span>Official name</span><span class="value">Mount Madison</span></div>
-      <div class="row"><span>Coordinates (WGS84)</span><span class="value mono">44.3288173, -71.2767796</span></div>
-      <div class="row"><span>Elevation</span><span class="value">5,367 ft (1,636 m)</span></div>
-      <div class="small">Source: USGS GNIS / WMNF references.</div>
+      <div class="stat-grid">
+        <div class="stat">
+          <div class="stat-label">Official name</div>
+          <div class="stat-value">Mount Madison</div>
+        </div>
+        <div class="stat">
+          <div class="stat-label">Coordinates (WGS84)</div>
+          <div class="stat-value mono">44.3288173, -71.2767796</div>
+        </div>
+        <div class="stat">
+          <div class="stat-label">Elevation</div>
+          <div class="stat-value">5,367 ft (1,636 m)</div>
+        </div>
+      </div>
+      <div class="stat-note small">Source: USGS GNIS / WMNF references.</div>
     </section>
 
     <section class="card" aria-labelledby="wx-h">
@@ -226,8 +269,8 @@ h1 { margin-top: 0 !important; }
         Snow & Freezing Level (last 24h)
       </div>
       <div id="snowSummary" class="value">Loading snow data…</div>
-      <ul id="snowList" class="clean small" aria-live="polite"></ul>
-      <div class="small">Source: Open-Meteo forecast API.</div>
+      <ul id="snowList" class="snow-list" aria-live="polite"></ul>
+      <div class="stat-note small">Source: Open-Meteo forecast API.</div>
     </section>
   </section>
 
@@ -320,9 +363,9 @@ h1 { margin-top: 0 !important; }
     const rows=[]; // next 24h in ~3h steps
     for (let i=0;i<t.length && rows.length<8;i+=3){
       const dt=new Date(t[i]); if (dt.getTime()<since) continue;
-      rows.push(`<li class="line"><strong>${dt.toLocaleTimeString([], {hour:'numeric'})}</strong> — snowfall ${rnd(snow[i],1) ?? '—'} cm, depth ${rnd(depth[i],1) ?? '—'} cm, freezing lvl ${frz[i]!=null?Math.round(frz[i])+' m':'—'}</li>`);
+      rows.push(`<li><span class="time">${dt.toLocaleTimeString([], {hour:'numeric'})}</span><span class="metrics">snowfall ${rnd(snow[i],1) ?? '—'} cm<br/>depth ${rnd(depth[i],1) ?? '—'} cm<br/>freezing lvl ${frz[i]!=null?Math.round(frz[i])+' m':'—'}</span></li>`);
     }
-    document.getElementById('snowList').innerHTML = rows.join('') || '<li>No recent snow data.</li>';
+    document.getElementById('snowList').innerHTML = rows.join('') || '<li class="stat">No recent snow data.</li>';
   } catch (e){
     document.getElementById('snowSummary').textContent = 'Unable to load snow data.';
     document.getElementById('snowList').innerHTML = '<li>Open-Meteo request failed.</li>';
